2004-03-23  Paolo Mantegazza  <mantegazza@aero.polimi.it>

	* base/sched/sched.c: keep ended hard kthreads pooled for reuse.

2004-03-22  Paolo Mantegazza  <mantegazza@aero.polimi.it>

	* base/include/headers-with_magic_numbers: changed definition of all 
	  magic numbers, now defined by using nam2num. All of them taken away
	  from modules coding and put in the related header.

2004-03-22  Michael Neuhauser  <mike@firmix.at>

	* base/scripts/mode-control: new script to change and check the
	  interrupt dispatching mode (immediate/piped)
	* base/scripts/GNUmakefile.*: added mode-control to EXTRA_DIST

2004-03-22  Michael Neuhauser  <mike@firmix.at>

	* testsuite/kern/latency/{latency-module.c, latency.c,
	  preempt-module.c, preempt.c}: use larger DEFAULT_PERIOD/TICK_TIME
	  for ARM systems (assumption: ARM => low-end system)
	* testsuite/kern/switches/switches-module.c: set stack-size to 4096 to
	  minimize waste and check if task creation has worked (both changes
	  were done to make this test work smoother on low-memory systems)
	* testsuite/user/latency/{display.c, switches.c, switches.pthread,
	  switches.rthread}: replaced select() with poll() as some
	  glibc-versions on ARM have a serious problem with syscalls that
	  have more than 4 arguments (and poll() is nicer anyway).

2004-03-15  Jan Kiszka  <kiszka@rts.uni-hannover.de>

	* base/include/asm-i386/rtai_oldnames: fixed legacy names macros
	   related to interrupt flags handling.

2004-03-21  Michael Neuhauser  <mike@firmix.at>

	* base/include/asm-arm/rtai_hal.*: made rtai_hw_*() on ARM fully
	  compatible to x86 names (i.e. added rtai_hw_cli() and rtai_hw_sti())

2004-03-19  Paolo Mantegazza  <mantegazza@aero.polimi.it>

	* base/ipc/msg/msg.c: added priority inheritance to rt_send/until/timed
	  in the case the sending blocks waiting for the rendes vous; care in
	  recovering priorities in case of timeouts. 

2004-03-16  Paolo Mantegazza  <mantegazza@aero.polimi.it>
