@@ -1,3 +1,7 @@
+2004-02-22  Roberto Bucher  <roberto.bucher@supsi.ch>
+
+	* rtai-lab/scilab/macros/RTAI: Modified text in some blocks
+
 2004-03-23  Paolo Mantegazza  <mantegazza@aero.polimi.it>
 
 	* base/sched/sched.c: keep ended hard kthreads pooled for reuse.
